Add a new route to post user
