# apps/ytc-back/src/controllers/user.controller.ts
@@ -3,6 +3,7 @@
    For more information, please refer to the license file or visit: https://creativecommons.org/licenses/by-nc/4.0/
 */
 
+import { UserType } from '@ytc/shared/models/util';
 import { Request, Response } from 'express';
 import { UserService } from '../services/user.service';
 
@@ -45,6 +46,40 @@ export class UserController {
         } catch (error) {
             console.error(error);
             res.status(500).send('An error occurred while fetching users');
+        }
+    }
+
+    /**
+     * Adds a new user to the database.
+     * @param req The request object.
+     * @param res The response object.
+     * @returns Promise<void>
+     */
+    async addUser(req: Request, res: Response): Promise<void> {
+        try {
+            const user: UserType = Object.assign({}, req.body);
+
+            if (!req.user.is_admin) {
+                res.status(401).send('Unauthorized to access this resource');
+                return;
+            }
+
+            if (!user.username) {
+                res.status(400).send('Missing username parameter in body');
+                return;
+            }
+            
+            if (user.is_admin === undefined) {
+                res.status(400).send('Missing is_admin parameter in body');
+                return;
+            }
+
+            const userId = await this.userService.AddUser(user);
+
+            res.status(201).json({ message: 'User added successfully!', userId });
+        } catch (error) {
+            console.error(error);
+            res.status(500).send('An error occurred while adding a new user');
         }
     }
 }
